# cmd/docs/swagger.json
@@ -914,7 +914,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_rowjay007_event-bookie_internal_service_payment.PaymentResponse"
+                            "$ref": "#/definitions/github_com_rowjay007_event-bookie_internal_service_payment.FlutterwavePaymentResponse"
                         }
                     },
                     "400": {
@@ -1276,6 +1276,53 @@
                 }
             }
         },
+        "/api/v1/payments/verify-flutterwave/:transaction_id": {
+            "get": {
+                "description": "Verify a payment using the payment reference",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "payments"
+                ],
+                "summary": "Verify a payment",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Payment reference ID",
+                        "name": "transaction_id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_rowjay007_event-bookie_internal_service_payment.FlutterwavePaymentVerificationResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid reference ID",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    },
+                    "404": {
+                        "description": "Payment not found",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    },
+                    "500": {
+                        "description": "Failed to verify payment",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/payments/{id}": {
             "get": {
                 "description": "Get a payment by ID",
@@ -1439,7 +1486,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_rowjay007_event-bookie_internal_service_payment.PaymentResponse"
+                            "$ref": "#/definitions/github_com_rowjay007_event-bookie_internal_service_payment.PaystackPaymentResponse"
                         }
                     },
                     "400": {
@@ -1457,7 +1504,7 @@
                 }
             }
         },
-        "/api/v1/paystack/verify-payment/:reference": {
+        "/api/v1/paystack/verify-payment/:reference_id": {
             "get": {
                 "description": "Verify a payment using the payment reference",
                 "produces": [
@@ -1480,7 +1527,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_rowjay007_event-bookie_internal_service_payment.PaymentVerificationResponse"
+                            "$ref": "#/definitions/github_com_rowjay007_event-bookie_internal_service_payment.PaystackVerificationResponse"
                         }
                     },
                     "400": {
@@ -2166,7 +2213,54 @@
                 }
             }
         },
-        "github_com_rowjay007_event-bookie_internal_service_payment.PaymentResponse": {
+        "github_com_rowjay007_event-bookie_internal_service_payment.FlutterwavePaymentResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "object",
+                    "properties": {
+                        "link": {
+                            "type": "string"
+                        }
+                    }
+                },
+                "message": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "github_com_rowjay007_event-bookie_internal_service_payment.FlutterwavePaymentVerificationResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "object",
+                    "properties": {
+                        "amount": {
+                            "type": "integer"
+                        },
+                        "currency": {
+                            "type": "string"
+                        },
+                        "status": {
+                            "type": "string"
+                        },
+                        "tx_ref": {
+                            "type": "string"
+                        }
+                    }
+                },
+                "message": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "github_com_rowjay007_event-bookie_internal_service_payment.PaystackPaymentResponse": {
             "type": "object",
             "properties": {
                 "data": {
@@ -2191,7 +2285,7 @@
                 }
             }
         },
-        "github_com_rowjay007_event-bookie_internal_service_payment.PaymentVerificationResponse": {
+        "github_com_rowjay007_event-bookie_internal_service_payment.PaystackVerificationResponse": {
             "type": "object",
             "properties": {
                 "data": {
